# sua

./: .gitignore  .pylintrc  Cargo.toml  LICENSE.html  Makefile  Pipfile  README.md  advanced_usage.html  configuration.html  first_steps.html  genindex.html  index.html  installation.html  introduction.html  logging_cfg.yaml  objects.inv  py-modindex.html  pyproject.toml  release_notes.html  run_sua_dev.bat  settings.sua.toml  setup.cfg  src.html  sua.html
.github/workflows/: README.md  coveralls.yml  documentation.yml  python_coveralls.yml  python_deploy_github_pages.yml  python_development.yml  python_production.yml  rust_development.yml  standards.yml  test_development.yml  test_production.yml
_modules/: index.html
_modules/iotemplate/: io_utils.html
_sources/: iotemplate.rst.txt  sua.vector3d.rst.txt
docs/source/: conf.py  configuration.rst  index.rst  sua.rst
docs/source/img/: README.md
resources/: README.md
scripts/: README.md
src/: README.md  launcher.py  lib.rs  setup.py  vector3d.rs
src/sua/: __init__.py  __init__.pyi  io_config.py  io_glob.py  io_glob.pyi  io_utils.py  io_utils.pyi  vector3d.py
tests/: README.md  conftest.py  pytest.ini  test_io_utils_cover.py  test_vector3d.py  test_vector3d.rs  vector3d.rs
